[gd_scene load_steps=65 format=3 uid="uid://cci24oag33sfq"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_xovnq"]
[ext_resource type="Texture2D" uid="uid://dc3ca7sfhhb2u" path="res://art/characters/player.png" id="2_x7v6g"]
[ext_resource type="Texture2D" uid="uid://dd13jekp2gmx8" path="res://art/characters/player-red.png" id="3_4cfer"]

[sub_resource type="AtlasTexture" id="AtlasTexture_vxwe7"]
atlas = ExtResource("2_x7v6g")
region = Rect2(0, 384, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_nkpt7"]
atlas = ExtResource("2_x7v6g")
region = Rect2(48, 384, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_qkx3s"]
atlas = ExtResource("2_x7v6g")
region = Rect2(96, 384, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_dc3jo"]
atlas = ExtResource("2_x7v6g")
region = Rect2(144, 384, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_tvyep"]
atlas = ExtResource("2_x7v6g")
region = Rect2(0, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_isor1"]
atlas = ExtResource("2_x7v6g")
region = Rect2(48, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_7n8by"]
atlas = ExtResource("2_x7v6g")
region = Rect2(96, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_fab4c"]
atlas = ExtResource("2_x7v6g")
region = Rect2(144, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_18ik0"]
atlas = ExtResource("2_x7v6g")
region = Rect2(192, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_qeqy5"]
atlas = ExtResource("2_x7v6g")
region = Rect2(240, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_vlfuk"]
atlas = ExtResource("2_x7v6g")
region = Rect2(0, 240, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_55pbq"]
atlas = ExtResource("2_x7v6g")
region = Rect2(48, 240, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_t0qpu"]
atlas = ExtResource("2_x7v6g")
region = Rect2(96, 240, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_fq6nn"]
atlas = ExtResource("2_x7v6g")
region = Rect2(144, 240, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_l5hj0"]
atlas = ExtResource("2_x7v6g")
region = Rect2(192, 240, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_hgbkp"]
atlas = ExtResource("2_x7v6g")
region = Rect2(240, 240, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_p6nqw"]
atlas = ExtResource("3_4cfer")
region = Rect2(0, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_287g4"]
atlas = ExtResource("3_4cfer")
region = Rect2(48, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_m4khq"]
atlas = ExtResource("3_4cfer")
region = Rect2(96, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_hrhdn"]
atlas = ExtResource("3_4cfer")
region = Rect2(144, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_lubk2"]
atlas = ExtResource("3_4cfer")
region = Rect2(192, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_j708l"]
atlas = ExtResource("3_4cfer")
region = Rect2(240, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_o87tu"]
atlas = ExtResource("2_x7v6g")
region = Rect2(0, 432, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ah03h"]
atlas = ExtResource("2_x7v6g")
region = Rect2(48, 432, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_wf6r7"]
atlas = ExtResource("2_x7v6g")
region = Rect2(96, 432, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_wakae"]
atlas = ExtResource("2_x7v6g")
region = Rect2(0, 288, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_yqdds"]
atlas = ExtResource("2_x7v6g")
region = Rect2(48, 288, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_fx4yi"]
atlas = ExtResource("2_x7v6g")
region = Rect2(96, 288, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ua4k1"]
atlas = ExtResource("2_x7v6g")
region = Rect2(144, 288, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_e36yy"]
atlas = ExtResource("2_x7v6g")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_nxpob"]
atlas = ExtResource("2_x7v6g")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_m567k"]
atlas = ExtResource("2_x7v6g")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_3qwym"]
atlas = ExtResource("2_x7v6g")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_xd3g7"]
atlas = ExtResource("2_x7v6g")
region = Rect2(192, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_q2rym"]
atlas = ExtResource("2_x7v6g")
region = Rect2(240, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_hhgks"]
atlas = ExtResource("2_x7v6g")
region = Rect2(0, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_dowsw"]
atlas = ExtResource("2_x7v6g")
region = Rect2(48, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_wlq0k"]
atlas = ExtResource("2_x7v6g")
region = Rect2(96, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_hpkb5"]
atlas = ExtResource("2_x7v6g")
region = Rect2(144, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_oa5w5"]
atlas = ExtResource("2_x7v6g")
region = Rect2(192, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_din3h"]
atlas = ExtResource("2_x7v6g")
region = Rect2(240, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_mri2h"]
atlas = ExtResource("2_x7v6g")
region = Rect2(0, 336, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_6ufby"]
atlas = ExtResource("2_x7v6g")
region = Rect2(48, 336, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_srcjw"]
atlas = ExtResource("2_x7v6g")
region = Rect2(96, 336, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_so3df"]
atlas = ExtResource("2_x7v6g")
region = Rect2(144, 336, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_6ogyh"]
atlas = ExtResource("2_x7v6g")
region = Rect2(0, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_4s0c8"]
atlas = ExtResource("2_x7v6g")
region = Rect2(48, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_3e8i6"]
atlas = ExtResource("2_x7v6g")
region = Rect2(96, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_0akyr"]
atlas = ExtResource("2_x7v6g")
region = Rect2(144, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_aguxo"]
atlas = ExtResource("2_x7v6g")
region = Rect2(192, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_dyi4o"]
atlas = ExtResource("2_x7v6g")
region = Rect2(240, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_6hnac"]
atlas = ExtResource("2_x7v6g")
region = Rect2(0, 192, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_1vflg"]
atlas = ExtResource("2_x7v6g")
region = Rect2(48, 192, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_x0ttw"]
atlas = ExtResource("2_x7v6g")
region = Rect2(96, 192, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_yw638"]
atlas = ExtResource("2_x7v6g")
region = Rect2(144, 192, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_c6hwu"]
atlas = ExtResource("2_x7v6g")
region = Rect2(192, 192, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_homse"]
atlas = ExtResource("2_x7v6g")
region = Rect2(240, 192, 48, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_wbgwg"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vxwe7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nkpt7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qkx3s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dc3jo")
}],
"loop": true,
"name": &"back_attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tvyep")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_isor1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7n8by")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fab4c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_18ik0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qeqy5")
}],
"loop": true,
"name": &"back_idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vlfuk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_55pbq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t0qpu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fq6nn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l5hj0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hgbkp")
}],
"loop": true,
"name": &"back_walk",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_p6nqw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_287g4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m4khq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hrhdn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lubk2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j708l")
}],
"loop": true,
"name": &"damage",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_o87tu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ah03h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wf6r7")
}],
"loop": true,
"name": &"death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wakae")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yqdds")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fx4yi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ua4k1")
}],
"loop": true,
"name": &"front_attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_e36yy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nxpob")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m567k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3qwym")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xd3g7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q2rym")
}],
"loop": true,
"name": &"front_idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hhgks")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dowsw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wlq0k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hpkb5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oa5w5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_din3h")
}],
"loop": true,
"name": &"front_walk",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mri2h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6ufby")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_srcjw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_so3df")
}],
"loop": true,
"name": &"side_attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6ogyh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4s0c8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3e8i6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0akyr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aguxo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dyi4o")
}],
"loop": true,
"name": &"side_idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6hnac")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1vflg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x0ttw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yw638")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c6hwu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_homse")
}],
"loop": true,
"name": &"side_walk",
"speed": 10.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_fuqn8"]
radius = 6.0

[sub_resource type="CircleShape2D" id="CircleShape2D_nwsnt"]
radius = 12.0416

[sub_resource type="CircleShape2D" id="CircleShape2D_4yaau"]
radius = 15.0

[node name="player" type="CharacterBody2D"]
y_sort_enabled = true
position = Vector2(1029, 510)
collision_layer = 3
script = ExtResource("1_xovnq")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(-13, -2)
sprite_frames = SubResource("SpriteFrames_wbgwg")
animation = &"side_walk"
frame_progress = 0.290693
offset = Vector2(2.08165e-12, -15)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-11, -6)
shape = SubResource("CircleShape2D_fuqn8")

[node name="player_hitbox" type="Area2D" parent="."]

[node name="playerhitbox" type="CollisionShape2D" parent="player_hitbox"]
position = Vector2(-11, -6)
shape = SubResource("CircleShape2D_nwsnt")

[node name="attackCooldown" type="Timer" parent="."]

[node name="deal_attack_timer" type="Timer" parent="."]
wait_time = 0.5

[node name="healthBar" type="ProgressBar" parent="."]
modulate = Color(0.156863, 0.784314, 0.360784, 1)
offset_left = -21.0
offset_top = -21.0
offset_right = 139.0
offset_bottom = 6.0
scale = Vector2(0.1, 0.1)
show_percentage = false
metadata/_edit_use_anchors_ = true

[node name="reginTimer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[node name="detectionNPCs" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="detectionNPCs"]
position = Vector2(-11, -6)
shape = SubResource("CircleShape2D_4yaau")

[connection signal="body_entered" from="player_hitbox" to="." method="_on_player_hitbox_body_entered"]
[connection signal="body_exited" from="player_hitbox" to="." method="_on_player_hitbox_body_exited"]
[connection signal="timeout" from="attackCooldown" to="." method="_on_attack_cooldown_timeout"]
[connection signal="timeout" from="deal_attack_timer" to="." method="_on_deal_attack_timer_timeout"]
[connection signal="timeout" from="reginTimer" to="." method="_on_regin_timer_timeout"]
[connection signal="body_entered" from="detectionNPCs" to="." method="_on_detection_np_cs_body_entered"]
[connection signal="body_exited" from="detectionNPCs" to="." method="_on_detection_np_cs_body_exited"]
